1999-10-31  Akim Demaille  <akim@epita.fr>

	Provide a means to specify commands to run before config.status is
	created (and, for symmetry, after it is created).

	This is typically needed by Automake so that AC_REPLACEd functions
	go through deansification via

	LIBOBJS=`echo $LIBOBJS | sed 's/\.o /\$U.o /g;s/\.o$/\$U.o/'`

	and/or by Libtool which needs to define LTLIBOBJS and others:

	LTLIBOBJS=`echo $LIBOBJS | sed 's/\.o/\.lo/g'`
	AC_SUBST(LTLIBOBJS)

	* acgeneral.m4 (AC_OUTPUT_PRE_COMMANDS): New growing string.
	Initialize.
	(AC_OUTPUT_POST_COMMANDS): Likewise.
	(AC_CONFIG_PRE_COMMANDS): New macro, grows AC_OUTPUT_PRE_COMMANDS.
	(AC_CONFIG_PRE_COMMANDS): Likewise.
	(AC_OUTPUT): Run AC_OUTPUT_PRE_COMMANDS before
	AC_OUTPUT_CONFIG_STATUS, and AC_OUTPUT_POST_COMMANDS after.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Remove spurious empty lines appearing in configures.

	* acgeneral.m4 (AC_CONFIG_UNIQUE): Produce no output.  Instead of
 	fighting with dnl, divert to KILL upon entry, and pop at exit.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INIT_PARSE_ARGS): Avoid using double quotes
	inside "`...`": some shells parse this incorrectly.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* Makefile.am (pkgdata_DATA, EXTRA_DIST): Removed acconfig.h.
	* testsuite/autoconf.s/defines.exp: Commented out, there is no
	longer an acconfig.h.

1999-10-31  Akim Demaille  <akim@epita.fr>

	* autoconf.m4: Insert -*- Autoconf -*-.
	* acgeneral.m4: Likewise.
	* acspecific.m4: Likewise.
	* acoldnames.m4: Likewise.

1999-10-31  Akim Demaille  <akim@epita.fr>

	Create AC_CONFIG_HEADERS which has the same interface as the other
	AC_CONFIG_*S.

	* acgeneral.m4 (AC_CONFIG_HEADERS): New macro, with the same
	interface as AC_CONFIG_LINKS and AC_CONFIG_FILES.
	(AC_LIST_HEADERS_COMMANDS): New growing string, initialize it.
	(AC_CONFIG_HEADER): Rename as...
	(AC_CONFIG_HEADERS): this, for consistency.
	(AC_CONFIG_HEADER): New macro, which calls AC_OUTPUT_HEADERS.