@@ -13,11 +13,17 @@ These are things mandatory to fulfill before releasing 2.15.  There
 are also suggestions we should either satisfy right now (they're
 easy), or remove (obsoleted since then).
 
+** AC_PROG_GNU_M4
+Document.
+
+** Produce a static list of all the AC_SUBST.
+This would greatly help Automake and the independence of Automake and
+Autoconf.  Currently Automake needs inner details of Autoconf.
+
 ** autoconf.texi: config.status in node names.
-The info mode of Emacs seems to have problems with this.  If the info
-reader catches that properly, we should not care.  If no info reader
-can handle this, we should change the affected node names.  Bug
-triggered by looking for `CONFIG_FILES' in the index.
+The info mode of Emacs seems to have problems with this.  The info
+reader catches this properly, so we should report to the X?Emacs teams.
+Bug triggered by looking for `CONFIG_FILES' in the index.
 
 ** AC_CONFIG_FILES, AC_CONFIG_COMMANDS.
 Will we need both ICMD and CMD as is the case for AC_OUTPUT_COMMANDS?
@@ -132,6 +138,13 @@ From: Roland McGrath <roland@gnu.ai.mit.edu>
 ------------------------------------------------------------------------------
 
 * Autoconf 3
+
+** Split all those &#@! files.
+acgeneral and acspecific is a bad design.  The split should be done
+according to the families.  For instance AC_CHECK_FUNCS,
+AC_CHECK_FUNC, AC_FUNC_FNMATCH etc. *and* AH_CHECK_FUNCS should be in,
+acfunc.m4.  I suppose there should be small exceptions, e.g., the
+family AC_REPLACE_FUNCS should still be in acfunc.m4.
 
 ** Use m4 lists?
 I think one sad decision in Autoconf was to use white space separated
