@@ -564,6 +564,19 @@ esac
 ])dnl AC_PROG_CC_STDC
 
 
+dnl AC_PROG_GNU_M4
+dnl --------------
+dnl Check for GNU m4.
+AC_DEFUN(AC_PROG_GNU_M4,
+[AC_PATH_PROGS(M4, gm4 gnum4 m4, m4)
+AC_CACHE_CHECK(whether we are using GNU m4, ac_cv_prog_gnu_m4,
+[ac_cv_prog_gnu_m4=no
+if test x"$M4" != x; then
+  case `$M4 --help < /dev/null 2>&1` in
+    *traditional*) ac_cv_prog_gnu_m4=yes ;;
+  esac
+fi])])
+
 dnl AC_PROG_MAKE_SET
 dnl ----------------
 dnl Define SET_MAKE to set ${MAKE} if make doesn't.
