@@ -1,5 +1,10 @@
 1999-10-31  Akim Demaille  <akim@epita.fr>
 
+	* acspecific.m4 (AC_PROG_GNU_M4): New macro.
+	* configure.in: Use it.
+
+1999-10-31  Akim Demaille  <akim@epita.fr>
+
 	Provide a means to specify commands to run before config.status is
 	created (and, for symmetry, after it is created).
 
